# gst-build

./: gst-env.py  meson_options.txt
