# Subproject options
option('python', type : 'feature', value : 'disabled')
option('libav', type : 'feature', value : 'auto')
option('libnice', type : 'feature', value : 'disabled')
option('ugly', type : 'feature', value : 'auto')
option('bad', type : 'feature', value : 'auto')
option('devtools', type : 'feature', value : 'auto')
option('ges', type : 'feature', value : 'disabled')
option('rtsp_server', type : 'feature', value : 'disabled')
option('omx', type : 'feature', value : 'disabled')
option('vaapi', type : 'feature', value : 'disabled')
option('sharp', type : 'feature', value : 'disabled')
option('rs', type : 'feature', value : 'disabled')
option('gst-examples', type : 'feature', value : 'disabled', description : 'Build gst-examples')
option('tls', type : 'feature', value : 'disabled', description : 'TLS support using glib-networking')

# Other options
option('custom_subprojects', type : 'string', value : '', description : 'Comma-separated project names')
option('gst-full-libraries', type : 'array', value : [],
  description : '''List of libraries to expose in gstreamer-full's ABI. gstreamer, glib and gobject are always included.''')

# Common options, automatically inherited by subprojects
option('tests', type : 'feature', value : 'disabled', description : 'Build tests')
option('examples', type : 'feature', value : 'disabled', description : 'Build examples')
option('introspection', type : 'feature', value : 'disabled', description : 'Generate introspection data')
option('nls', type : 'feature', value : 'auto', description : 'Enable native language support (translations)')
option('orc', type : 'feature', value : 'auto', description : 'Enable Optimized Inner Loop Runtime Compiler')
option('doc', type : 'feature', value : 'disabled', description : 'Generate API documentation with hotdoc')
option('gtk_doc', type : 'feature', value : 'disabled', description : 'Generate API documentation with gtk-doc')
